--- a/main.css
+++ b/main.css
@@ -10,35 +10,25 @@ button {
 }
 
 @font-face {
-    font-family: 'TT Lakes Compressed';
-    src: url('TTLakesCompressed-Regular.eot');
-    src: local('TT Lakes Compressed Regular'), local('TTLakesCompressed-Regular'),
-        url('TTLakesCompressed-Regular.eot?#iefix') format('embedded-opentype'),
-        url('TTLakesCompressed-Regular.woff') format('woff'),
-        url('TTLakesCompressed-Regular.ttf') format('truetype');
-    font-weight: normal;
+    font-family: TT;
+    src: url('./Fonts/TTLakes-Regular.woff') format('woff'),
+         url('./Fonts/TTLakes-Regular.ttf') format('truetype');
+    font-weight: 400;
     font-style: normal;
 }
-
 @font-face {
-    font-family: 'TT Lakes Condensed';
-    src: url('TTLakesCondensed-Medium.eot');
-    src: local('TT Lakes Condensed Medium'), local('TTLakesCondensed-Medium'),
-        url('TTLakesCondensed-Medium.eot?#iefix') format('embedded-opentype'),
-        url('TTLakesCondensed-Medium.woff') format('woff'),
-        url('TTLakesCondensed-Medium.ttf') format('truetype');
+    font-family: TT;
+    src: url('./Fonts/TTLakes-Medium.woff') format('woff'),
+         url('./Fonts/TTLakes-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
 }
 @font-face {
-    font-family: 'TT Lakes Compressed';
-    src: url('TTLakesCompressed-ExtraBoldItalic.eot');
-    src: local('TT Lakes Compressed ExtraBold Italic'), local('TTLakesCompressed-ExtraBoldItalic'),
-        url('TTLakesCompressed-ExtraBoldItalic.eot?#iefix') format('embedded-opentype'),
-        url('TTLakesCompressed-ExtraBoldItalic.woff') format('woff'),
-        url('TTLakesCompressed-ExtraBoldItalic.ttf') format('truetype');
+    font-family: TT;
+    src: url('./Fonts/TTLakes-Bold.woff') format('woff'),
+         url('./Fonts/TTLakes-Bold.ttf') format('truetype');
     font-weight: 700;
-    font-style: italic;
+    font-style: normal;
 }
 
 body {
