--- a/main.css
+++ b/main.css
@@ -11,22 +11,22 @@ button {
 
 @font-face {
     font-family: TT;
-    src: url('./Fonts/TTLakes-Regular.woff') format('woff'),
-         url('./Fonts/TTLakes-Regular.ttf') format('truetype');
+    src: url('/Fonts/TTLakes-Regular.woff') format('woff'),
+         url('/Fonts/TTLakes-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
 @font-face {
     font-family: TT;
-    src: url('./Fonts/TTLakes-Medium.woff') format('woff'),
-         url('./Fonts/TTLakes-Medium.ttf') format('truetype');
+    src: url('/Fonts/TTLakes-Medium.woff') format('woff'),
+         url('/Fonts/TTLakes-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
 }
 @font-face {
     font-family: TT;
-    src: url('./Fonts/TTLakes-Bold.woff') format('woff'),
-         url('./Fonts/TTLakes-Bold.ttf') format('truetype');
+    src: url('/Fonts/TTLakes-Bold.woff') format('woff'),
+         url('/Fonts/TTLakes-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
 }
